--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     <div>
     <a href="./index.html" class="logo"><span class="accent">Web</span><span class="logo-footer">Studio</span></a>
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-</div>
+    </div>
 
       <div class="container-footer">
         <p class="text-socials">Social media</p>
@@ -355,19 +355,63 @@
             </li>
         </ul>
       </div>
-        
-    </div>
 </footer>
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-       <button type="button" class="modal-button" data-modal-close> 
-           <svg class="modal-icon">
-               <use href="./images/icons.svg#icon-Vector"></use>
-           </svg>
-   </button>
+        <button type="button" class="modal-button" data-modal-close>
+        <svg class="modal-icon">
+            <use href="./images/icons.svg#icon-Vector"></use>
+        </svg>
+        </button>
+        <p class="you-contact">Leave your contacts and we will call you back</p>
+      <form class="form js-speaker-form">
+       
+    <div class="form-field">
+      <label class="form-label" for="user-name">Name</label>
+    <div class="icon-input">
+        <input class="form-input" type="text" name="name" id="user-name">
+        <svg class="form-svg" width="18" height="18">
+            <use class="form-icon" href="./images/icons.svg#icon-person-black-18dp-1"></use>
+        </svg>
+    </div>     
+    </div>
+ 
+    <div class="form-field">
+        <label class="form-label" for="user-phone">Phone</label>
+    <div class="icon-input"> 
+      <input class="form-input" type="tel" name="Phone" id="user-phone" autofocus />    
+       <svg class="form-svg" width="24" height="24">
+        <use class="form-icon" href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+       </svg>
+    </div> 
+    </div>
+    <div class="form-field">
+        <label class="form-label" for="user-email">Email</label> 
+    <div class="icon-input">
+        <input class="form-input" type="email" name="email" id="user-email" />
+        <svg class="form-svg" width="24" height="24">
+            <use class="form-icon" href="./images/icons.svg#icon-email-black-18dp-1"></use>
+        </svg>
+    </div>
+    </div>
+     <div class="form-field">
+        <label class="form-label" for="">Comment</label>
+        <textarea class="comment-textarea" name="user-comment" placeholder="Text input"></textarea>
+        </label>
+    </div>
+     <div class="form-field">
+        <input class="checkbox-input" type="checkbox" name="check-mark"> 
+        <span class="checkbox-icon"></span> 
+       <label  class="checkbox-labl"> I accept the terms and conditions of the Privacy Policy
+       <a class="privacy-policy" href="">Privacy Policy</a>
+     </label>
+    </div>
+       <button class="button primary form-button" type="submit">Send</button>
+      </form>
     </div>
  </div>
-<script src="./JS modal.js/js modal.js"></script>
+<script src="./jsmodal.js/jsmodal.js">
+</script>
 </body>
 </html>
    
