--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
      <div class="form-field">
         <input class="checkbox-input" type="checkbox" name="check-mark"> 
         <span class="checkbox-icon"></span> 
-       <label  class="checkbox-labl"> I accept the terms and conditions of the Privacy Policy
+       <label  class="checkbox-labl"> I accept the terms and conditions of the 
        <a class="privacy-policy" href="">Privacy Policy</a>
      </label>
     </div>
