--- a/index.html
+++ b/index.html
@@ -413,10 +413,10 @@
         </label>
     </div>
      <div class="form-field">
-        <input class="checkbox-input" type="checkbox" name="check-mark"> 
+       <label  class="checkbox-labl"><input class="checkbox-input" type="checkbox" name="check-mark">
         <span class="checkbox-icon"></span> 
-       <label  class="checkbox-labl"> I accept the terms and conditions of the 
-       <a class="privacy-policy" href="">Privacy Policy</a>
+        I accept the terms and conditions of the 
+       <a class="privacy-policy" href>Privacy Policy</a>
      </label>
     </div>
        <button class="form-button button primary" type="submit">Send</button>
