--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" 
     integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" 
     crossorigin="anonymous" 
-    referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css"/>
+    referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 <body>
@@ -198,7 +198,7 @@
                   <li class="socials-item">
                     <a class="socials-link" href="">
                         <svg class="socials-icon">
-                            <use a href="./images/icons.svg#icon-twitter"></use> 
+                            <use href="./images/icons.svg#icon-twitter"></use> 
                         </svg>
                     </a>
                 </li>
@@ -261,7 +261,7 @@
     </div>
    </section>
    
-   <section class="customers"class="section no-padding">
+   <section class="customers" class="section no-padding">
     <div class="container">
         <h2 class="title">Customers</h2>
     <ul class="customers-list"> 
@@ -392,7 +392,7 @@
     <div class="form-field">
         <label class="form-label" for="user-phone">Phone</label>
     <div class="icon-input"> 
-      <input class="form-input" type="tel" name="Phone" id="user-phone" autofocus />    
+      <input class="form-input" type="tel" name="Phone" id="user-phone" autofocus >    
        <svg class="form-svg" width="24" height="24">
         <use class="form-icon" href="./images/icons.svg#icon-phone-black-18dp-1"></use>
        </svg>
@@ -401,25 +401,25 @@
     <div class="form-field">
         <label class="form-label" for="user-email">Email</label> 
     <div class="icon-input">
-        <input class="form-input" type="email" name="email" id="user-email" />
+        <input class="form-input" type="email" name="email" id="user-email" >
         <svg class="form-svg" width="24" height="24">
             <use class="form-icon" href="./images/icons.svg#icon-email-black-18dp-1"></use>
         </svg>
     </div>
     </div>
      <div class="form-field">
-        <label class="form-label" for="">Comment</label>
+        <label class="form-label">Comment
         <textarea class="comment-textarea" name="user-comment" placeholder="Text input"></textarea>
-        </label>
+    </label>
     </div>
      <div class="form-field">
        <label  class="checkbox-labl"><input class="checkbox-input" type="checkbox" name="check-mark">
         <span class="checkbox-icon"></span> 
         I accept the terms and conditions of the 
-       <a class="privacy-policy" href>Privacy Policy</a>
-     </label>
+       <a class="privacy-policy">Privacy Policy</a>
+       </label>
     </div>
-       <button class="form-button button primary" type="submit">Send</button>
+       <button class="form-button" type="submit">Send</button>
       </form>
     </div>
  </div>
