--- a/index.html
+++ b/index.html
@@ -413,10 +413,13 @@
     </label>
     </div>
      <div class="form-field">
-       <label  class="checkbox-labl"><input class="checkbox-input" type="checkbox" name="check-mark">
-        <span class="checkbox-icon"></span> 
-        I accept the terms and conditions of the 
-       <a class="privacy-policy">Privacy Policy</a>
+       <label  class="checkbox-label">
+        <input class="checkbox-input" type="checkbox" name="check-mark">
+        <span class="checkbox-icon"></span>
+        <b class="text-privacy"> 
+        I accept the terms and conditions of the
+       <a class="privacy-policy" href=>Privacy Policy</a>
+    </b>
        </label>
     </div>
        <button class="form-button" type="submit">Send</button>
